--- a/rebar.config
+++ b/rebar.config
@@ -85,4 +85,4 @@
   emqx_exproto_pb % generated code for protobuf
 ]}.
 
-{project_plugins, [erlfmt, {rebar3_hex, "7.0.2"}]}.
+{project_plugins, [erlfmt, {rebar3_hex, "7.0.2"}, rebar3_sbom]}.
